2016-01-28 Erwin Waterlander <waterlan@xs4all.nl>
	* man/*/man1/dos2unix.po: Moved all manual .po file to directory
	  po-man/. The .po files are now in their original name.
	* Makefile, man/man1/Makefile: Build international manuals from
	  the .po files in folder po-man/.

2016-01-20 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fixed printing text in unicode UTF-16 mode on Windows,
	  so that when it is redirected to a file, a correct UTF-16 file
	  is created. Thanks to Hans Passant.
	* common.c: Added display encoding methods "unicodebom" and "utf8bom". These
	  methods add a BOM to stdout, which is required for correct redirection
	  in PowerShell.
	* man/man1/dos2unix.pod: Updated manual for option -D.
	* test/testps16.ps1, test/testps8.ps1: Fixed select-string test.

2016-01-16 Erwin Waterlander <waterlan@xs4all.nl>
	* *.c: Fixed printing of East-Asian ANSI multi-byte encoded text on Windows
	  with an East-Asian regional setting.
	  It appears that when setlocale() sets the locale to "" in the beginning
	  of main(), which is done for gettext translations, multi-byte ANSI is
	  printed wrongly. On windows we need to set the locale to "C" to make East-
	  Asian text printed correctly. On Unix setting the locale to "C" would
	  disable the gettext translations, but on Windows it keeps working.
	* test/setlocale.c: New test program that proves that setlocale(LC_ALL, "")
	  breaks printf() on Windows for Chinese CP936 encoded text in a CP936
	  regional setting, and for UTF-8 text.
	* test/setlocale.png: Example output of the test program.
	* common.h, *.c: Created macro D2U_FPRINTF, for correct printing of text
	  when Unicode file names support is disabled.

2016-01-13 Erwin Waterlander <waterlan@xs4all.nl>
	* *.c: Use d2u_ansi_fprintf() for printing the help text, version
	  information and license. It appears that printing Chinese text
	  properly in a Windows Command Prompt in a Chinese regional setting