@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 7.3.3-beta6
-DOS2UNIX_VERSION_SHORT = 733b6
-DOS2UNIX_DATE = 2016-01-24
+DOS2UNIX_VERSION = 7.3.3-beta7
+DOS2UNIX_VERSION_SHORT = 733b7
+DOS2UNIX_DATE = 2016-01-29
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
