@@ -1,3 +1,7 @@
+2016-01-29 Erwin Waterlander <waterlan@xs4all.nl>
+	* Makefile: Don't install international man pages when ENABLE_NLS
+	  is empty. Thanks to anonymous.
+
 2016-01-28 Erwin Waterlander <waterlan@xs4all.nl>
 	* man/*/man1/dos2unix.po: Moved all manual .po file to directory
 	  po-man/. The .po files are now in their original name.
